--- a/index.html
+++ b/index.html
@@ -1,30 +1,38 @@
-
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Memory Matters - Specialist Clinic for Memory & Senior Mental Health</title>
-    <meta name="description" content="Professional geriatric psychiatric care by Dr. Soumya Hegde. Specialized in memory screening, dementia evaluation, and senior mental health in Bangalore." />
-    <meta name="author" content="Memory Matters Clinic" />
-    <link rel="icon" type="image/jpeg" href="/logo.jpeg" />
 
-    <meta property="og:title" content="Memory Matters - Neurology & Memory Care Clinic" />
-    <meta property="og:description" content="Professional neurology and memory care services by Dr. Soumya Hegde. Comprehensive memory assessments, dementia care, and family support." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Memory Matters - Specialist Clinic for Memory & Senior Mental Health</title>
+  <meta name="description"
+    content="Professional geriatric psychiatric care by Dr. Soumya Hegde. Specialized in memory screening, dementia evaluation, and senior mental health in Bangalore." />
+  <meta name="author" content="Memory Matters Clinic" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/favicon_io/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon_io/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon_io/favicon-16x16.png">
+  <link rel="manifest" href="/favicon_io/site.webmanifest">
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@memorymattersclinic" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-    
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-  </head>
+  <meta property="og:title" content="Memory Matters - Neurology & Memory Care Clinic" />
+  <meta property="og:description"
+    content="Professional neurology and memory care services by Dr. Soumya Hegde. Comprehensive memory assessments, dementia care, and family support." />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@memorymattersclinic" />
+  <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Inter:wght@300;400;500;600;700&display=swap"
+    rel="stylesheet">
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
